fixed js console errors
they weren't caused by us, but i might as well

--- a/ui/entrypoints/main/index.html
+++ b/ui/entrypoints/main/index.html
@@ -113,10 +113,11 @@
     <!-- <script src="modules/modmanager2/modmanager2.js"></script> -->
 
     <!-- Mod Wizard -->
-    <script src="modules/modwizard/modwizard.js"></script>
+    <!-- DISABLED this just throws console errors because the content isn't there, likely legacy code
+	<script src="modules/modwizard/modwizard.js"></script>
     <script src="modules/modwizard/skinWizard/skinwizard.js"></script>
     <script src="modules/modwizard/vehicleWizard/vehiclewizard.js"></script>
-    <script src="modules/modwizard/terrainWizard/terrainwizard.js"></script>
+    <script src="modules/modwizard/terrainWizard/terrainwizard.js"></script> -->
 
     <link rel="stylesheet" type="text/css" href="modules/ui-components/bng-components.css">
 
