--- a/ui/modules/multiplayer/tos.partial.html
+++ b/ui/modules/multiplayer/tos.partial.html
@@ -1,4 +1,4 @@
-<div style="background-color: rgba(0, 0, 0, 0.5); display: flex; width: 100%;">
+<div style=" display: flex; width: 100%;">
   <div class="md-padding" style="display:flex; max-height: 1000px; min-width: 500px; width: 70%; max-width: 80%; margin: 2.5% auto; background-color: rgba(255, 255, 255, 0.85); color: rgb(62, 62, 62); overflow-y: scroll">
     <style>
       md-radio-button .md-container {
