--- a/ui/modules/multiplayer/multiplayer.html
+++ b/ui/modules/multiplayer/multiplayer.html
@@ -8,35 +8,6 @@
     </div>
 </div>
 
-<div id="MultiplayerLoginBody" style="">
-    <div id="LoginContainer" class="GuestLoginContainer">
-        <div class="col-2">
-			<img src="local://local/ui/modules/multiplayer/beammp.png" alt="BeamMP Logo">
-        </div>
-        <form class="col-2">
-			<h2 class="text-white" id="loginHeader">Login with your BeamMP account.</h2>
-			<h2 class="text-red LOGINERRORFIELD"></h2>
-			<input (keyup.enter)="multiplayer.login()" type="text" id="loginUsername" placeholder="Username / Email"/>
-			<input (keyup.enter)="multiplayer.login()" type="password" id="loginPassword" placeholder="Password"/>
-			<md-button id="" class="button" ng-click="multiplayer.login()">Login</md-button>
-			<md-button id="" class="button" ng-click="multiplayer.switchToGuest()">Play as Guest</md-button>
-			<md-button id="" class="button" onclick="openExternalLink('https://forum.beammp.com/register')">Register</md-button>
-        </form>
-    </div>
-    <div id="GuestContainer" class="GuestLoginContainer" style="display: none;">
-        <div class="col-2">
-          <img src="local://local/ui/modules/multiplayer/beammp.png" alt="BeamMP Logo">
-        </div>
-        <form class="col-2">
-          <h2 class="text-white">Please enter a Username to play with.</h2>
-          <h2 class="text-red LOGINERRORFIELD"></h2>
-          <input type="text" id="guestUsername" placeholder="Username"/>
-      		<md-button id="" class="button" ng-click="multiplayer.guestLogin()">Play</md-button>
-          <md-button id="" class="button" ng-click="multiplayer.switchToLogin()">Login</md-button>
-        </form>
-    </div>
-</div>
-
 <div id="addCustomFav" style="display: none;">
 	<md-button style="right:0; top:0; margin:0;" class="button close-button" ng-class="" ng-click="multiplayer.closePopup()"> X </md-button>
 	<md-list-item layout class="md-padding">
@@ -92,7 +63,7 @@
 	    
 	    <div flex="" style="max-height: none;"></div>
 	    
-        <md-button id="direct-connect-btn" ng-click="multiplayer.logout()" class="md-raised md-accent" style="text-align:left;">
+        <md-button id="direct-connect-btn" ng-click="logout()" class="md-raised md-accent" style="text-align:left;">
           <md-icon class="material-icons">exit_to_app</md-icon>
 				  Logout
         </md-button>
