--- a/ui/modules/multiplayer/login.partial.html
+++ b/ui/modules/multiplayer/login.partial.html
@@ -13,7 +13,7 @@
 				<div style="display:flex; align-content: space-evenly;">
 					<md-button class="button" ng-click="login()">Login</md-button>
 					<md-button class="button" ng-click="switchConnection()">Play as Guest</md-button>
-					<md-button class="button" onclick="openExternalLink('https://forum.beammp.com/register')">Register</md-button>
+					<md-button class="button" onclick="openExternalLink('https://forum.beammp.com/signup')">Register</md-button>
 				</div>
 			</form>
 			<form id="GuestContainer" style="display: none;">
