--- a/ui/entrypoints/main/index.html
+++ b/ui/entrypoints/main/index.html
@@ -112,8 +112,7 @@
     <!-- <script src="modules/modmanager2/modmanager2.js"></script> -->
 
     <!-- Mod Wizard -->
-    <!-- DISABLED this just throws console errors because the content isn't there, likely legacy code
-	<script src="modules/modwizard/modwizard.js"></script>
+    <!-- <script src="modules/modwizard/modwizard.js"></script>
     <script src="modules/modwizard/skinWizard/skinwizard.js"></script>
     <script src="modules/modwizard/vehicleWizard/vehiclewizard.js"></script>
     <script src="modules/modwizard/terrainWizard/terrainwizard.js"></script> -->
