--- a/ui/modules/multiplayer/servers.partial.html
+++ b/ui/modules/multiplayer/servers.partial.html
@@ -1,7 +1,7 @@
 <!-- DataTables CSS --
 <link href="modules/multiplayer/css/dataTables/dataTables.bootstrap.css" rel="stylesheet">
 
-<!-- DataTables Responsive CSS -->
+<!-- DataTables Responsive CSS --
 <link href="modules/multiplayer/css/dataTables/dataTables.responsive.css" rel="stylesheet">
 
 <!-- DataTables JavaScript -->
