--- a/ui/modules/vehicleselect/vehicleselect.html
+++ b/ui/modules/vehicleselect/vehicleselect.html
@@ -1,65 +1,22 @@
-<link rel="stylesheet" type="text/css" href="modules/vehicleselect/vehicleselect.css" />
+<link rel="stylesheet" type="text/css" href="/ui/modules/vehicleselect/vehicleselect.css" />
 
-<md-content bng-nav-root flex style="max-width:1200px;height: 100%" layout="column" class="VehicleSelect" >
+<md-content bng-nav-root flex style="max-width:1200px; height: 100%" layout="column" class="VehicleSelect" >
   <md-toolbar >
     <div class="md-toolbar-tools">
       <md-button md-no-ink class="md-icon-button md-default" aria-label="Back" ui-sref="{{vehicles.mode.backButtonRef}}" ng-if="vehicles.mode.backButtonRef">
         <md-icon class="material-icons">arrow_back</md-icon>
       </md-button>
       <div style="margin: 8px">Vehicles</div>
-	  <div ng-if="!vehicles.isMPSession && !vehicles.isNotMPSession" flex layout="row" layout-align="center center" layout-wrap> </div>
-      <div ng-if="vehicles.isMPSession" flex layout="row" layout-align="center center" layout-wrap>
 
-        <md-button class="md-raised" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.saveDefault()">
-          <md-icon class="material-icons"  style="color:black;;">sd_storage</md-icon>
-          {{ ::'ui.options.gameplay.defaultToCurrentVehicle' | translate }}
-        </md-button>
-        <md-button class="md-raised" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.loadDefault()">
-          <md-icon class="material-icons"  style="color:black;;">folder_open</md-icon>
-          {{ ::'ui.options.gameplay.loadDefaultVehicle' | translate }}
-        </md-button>
+      <!-- Align elements to the right -->
+      <span flex></span>
 
-        <md-button class="md-raised" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.cloneCurrentVehicle()">
-          <md-icon class="material-icons"  style="color:black;font:bold;">content_copy</md-icon>
-          {{ ::'ui.options.gameplay.cloneCurrentVehicle' | translate }}
-        </md-button>
-        <md-button class="md-raised" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.removeCurrentVehicle()">
-          <md-icon class="material-icons"  style="color:black;font:bold;">delete</md-icon>
-          {{ ::'ui.options.gameplay.removeCurrentVehicle' | translate }}
-        </md-button>
-      </div>
-
-      <div ng-if="vehicles.isNotMPSession" flex layout="row" layout-align="left center" style="margin-left: 24px; overflow:auto;">
-
-        <md-button style="min-width: fit-content; min-height: 80%; font-size: 60%;" class="md-raised" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.saveDefault()">
-          <md-icon class="material-icons"  style="color:black;;">sd_storage</md-icon>
-          {{ ::'ui.options.gameplay.defaultToCurrentVehicle' | translate }}
-        </md-button>
-        <md-button style="min-width: fit-content; min-height: 80%; font-size: 60%;" class="md-raised" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.loadDefault()">
-          <md-icon class="material-icons"  style="color:black;;">folder_open</md-icon>
-          {{ ::'ui.options.gameplay.loadDefaultVehicle' | translate }}
-        </md-button>
-        <md-button style="min-width: fit-content; min-height: 80%; font-size: 60%;" class="md-raised" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.cloneCurrentVehicle()">
-          <md-icon class="material-icons"  style="color:black;;">content_copy</md-icon>
-          {{ ::'ui.options.gameplay.cloneCurrentVehicle' | translate }}
-        </md-button>
-        <md-button style="min-width: fit-content; min-height: 80%; font-size: 60%;" class="md-raised" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.removeCurrentVehicle()">
-          <md-icon class="material-icons"  style="color:black;;">delete</md-icon>
-          {{ ::'ui.options.gameplay.removeCurrentVehicle' | translate }}
-        </md-button>
-        <!--<md-button style="min-width: fit-content; min-height: 80%; font-size: 60%;" class="md-raised" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.removeAllVehicles()">
-          <md-icon class="material-icons"  style="color:black;;">delete_sweep</md-icon>
-          Remove all
-        </md-button>-->
-        <md-button style="min-width: fit-content; min-height: 80%; font-size: 60%;" class="md-raised" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.removeAllExceptCurrentVehicle()">
-          <md-icon class="material-icons"  style="color:black;;">delete_sweep</md-icon>
-          {{ ::'ui.options.gameplay.removeOtherVehicles' | translate }}
-        </md-button>
+      <md-button style="min-width: fit-content; font-size: 70%; margin-right: 12px;" class="md-raised" ng-click="vehicles.showFiltersBar = !vehicles.showFiltersBar">
+        <md-icon class="material-icons"  style="color:black;;">filter_list</md-icon>
+        {{"ui.options.gameplay.showFilters" | translate}}
+      </md-button>
 
       </div>
-
-      <md-checkbox layout="row" layout-align="center center" md-no-ink ng-model="vehicles.showFiltersBar">{{"ui.options.gameplay.showFilters" | translate}}</md-checkbox>
-    </div>
   </md-toolbar>
 
   <div style="background-color: white; position: relative" flex>
@@ -67,16 +24,22 @@
       bng-v-list bng-v-repeat="model in vehicles.shownData">
       <div class="gridItem VScroll" bng-nav-item nav-item-enter-focus="{{ :: 0 === $index }}"  bng-all-clicks single="vehicles.goToConfigs(model)" double="vehicles.launchVehicle(model)">
         <bng-box>
-          <div ng-if="model.preview" style="background-image:url('{{model.preview}}'); background-size: cover; background-position: center center;" class="filler"></div>
+          <div ng-if="model.preview" style="background-size: cover; background-position: center center;" ng-style="{'background-image': 'url(' + model.preview + ')'}" class="filler"></div>
 
           <div layout="row" layout-align="start end" class="container">
+            <bng-icon style="margin-left: 0.5em; width: 1em; position: absolute; top: 6%;
+            right: 4%" src="'/ui/assets/Original/camshaft_automation_logo.svg'" type="img" ng-if=":: model.Type === 'Automation'"></bng-icon>
             <div class="vehicleFooter" layout="row" layout-align="start center">
-              <bng-icon style="margin-left: 0.5em; width: 1em; position: relative;" src="'general_beamng_logo_w'" type="sprite" ng-if=":: model.aggregates.Source['BeamNG - Official']"></bng-icon>
-              <bng-icon style="margin-left: 0.5em; width: 1em; position: relative;" src="'Assets/Original/camshaft_automation_logo.svg'" type="img" ng-if=":: model.Type === 'Automation'"></bng-icon>
-              <div layout-align="center center" style="margin-left: 0.5em; width: calc(100% - 2em);" class="truncate">
+              <div layout-align="center center" style="margin-left: 0.0em; width: calc(100% - 2em);" class="truncate">
                 <span>{{ ::model.Brand }}</span>
                 <span>{{ ::model.Name || 'Unknown' }}</span>
+                <md-tooltip ng-if="isBig(model.Brand + model.Name)" md-direction="bottom">{{ ::model.Brand }} {{ ::model.Name }}</md-tooltip>
+
+                <!-- <md-icon style="margin-left: 0.14em; width: 1em; position: absolute; font-size:185%" class="material-icons">folder_open</md-icon> -->
+
               </div>
+              <span ng-if="model.configsAmount > 1" style="margin: 0; width: 3.1em; position: relative; text-align:right; font-size: 80%; opacity:0.9" bng-all-clicks single="vehicles.goToConfigs(model)" double="vehicles.goToConfigs(model)">{{model.configsAmount}}</span>
+
             </div>
           </div>
         </bng-box>
@@ -85,24 +48,63 @@
   </div>
 </md-content>
 
-<md-content ng-if="vehicles.showFiltersBar" flex="35" layout="column" style="max-width: 400px; height: 100%;height:100%; width: 300px; box-sizing: border-box" >
+<md-content ng-if="vehicles.showFiltersBar" flex="35" layout="column" style="max-width: 450px; height: 100%; width: 300px; box-sizing: border-box" >
   <md-toolbar class="md-primary md-hue-1">
     <div class="md-toolbar-tools">
       <span flex>{{ ::'ui.common.filters' | translate }}</span>
     </div>
   </md-toolbar>
-  <div style="padding:10px;">
+  <div style="padding: 10px;">
 
-    <md-input-container flex>
-      <label>{{ ::'ui.common.search' | translate }}</label>
-      <input ng-model="vehicles.query" ng-model-options="{debounce: 400}" ng-change="vehicles.applyFilters()">
+    <div layout="row" layout-wrap layout-align="center center" style="min-height: fit-content; border-bottom: 1px solid rgba(0, 0, 0, .2); padding-bottom: 10px;">
+
+      <md-button style="min-width: fit-content; font-size: 70%;" class="md-raised md-primary" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.saveDefault()">
+        <md-icon class="material-icons"  style="color:white;;">sd_storage</md-icon>
+        {{ ::'ui.options.gameplay.defaultToCurrentVehicle' | translate }}
+      </md-button>
+      <md-button style="min-width: fit-content; font-size: 70%;" class="md-raised md-primary" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.loadDefault()">
+        <md-icon class="material-icons"  style="color:white;;">folder_open</md-icon>
+        {{ ::'ui.options.gameplay.loadDefaultVehicle' | translate }}
+      </md-button>
+      <md-button style="min-width: fit-content; font-size: 70%;" class="md-raised md-primary" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.cloneCurrentVehicle()">
+        <md-icon class="material-icons"  style="color:white;;">content_copy</md-icon>
+        {{ ::'ui.options.gameplay.cloneCurrentVehicle' | translate }}
+      </md-button>
+      <md-button style="min-width: fit-content; font-size: 70%;" class="md-raised md-accent" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.resetAll()">
+        <md-icon class="material-icons"  style="color:white;;">settings_backup_restore</md-icon>
+        Reset All
+      </md-button>
+      <md-button style="min-width: fit-content; font-size: 70%;" class="md-raised md-warn" ng-if="!vehicles.mode.hide.removeBtns" ng-click="vehicles.removeCurrentVehicle()">
+        <md-icon class="material-icons"  style="color:white;;">delete</md-icon>
+        {{ ::'ui.options.gameplay.removeCurrentVehicle' | translate }}
+      </md-button>
+      <md-button style="min-width: fit-content; font-size: 70%;" class="md-raised md-warn" ng-if="!vehicles.mode.hide.removeBtns && !vehicles.isMPSession" ng-click="vehicles.removeAllExceptCurrentVehicle()">
+        <md-icon class="material-icons"  style="color:white;;">delete_sweep</md-icon>
+        {{ ::'ui.options.gameplay.removeOtherVehicles' | translate }}
+      </md-button>
+
+    </div>
+
+
+  <div layout="row" layout-align="center center" style="z-index: 1;">
+    <md-input-container flex bng-all-clicks double="vehicles.showConfigurations ? (vehicles.showConfigurations = false) : (vehicles.showConfigurations = true); vehicles.switchList()">
+      <label ng-if="!vehicles.query"><md-icon class="material-icons">search</md-icon>{{ ::'ui.common.search' | translate }}</label>
+      <label ng-if="vehicles.query"><md-icon class="material-icons">search</md-icon>{{ ::'ui.common.vehSearch' | translate }}</label>
+      <input ng-model="vehicles.query" ng-model-options="{debounce: 400}" ng-change="vehicles.applyFilters(); vehicles.switchList()" aria-label="Search">
     </md-input-container>
+    <md-button md-no-ink class="md-icon-button md-warn" ng-click="vehicles.query = ''; vehicles.showConfigurations = false; vehicles.applyFilters(); vehicles.switchList()" ng-disabled="!vehicles.query">
+      <md-icon class="material-icons">close</md-icon>
+    </md-button>
+  </div>
 
-    <md-checkbox layout-align="center center" md-no-ink ng-model="vehicles.showConfigurations" ng-change="vehicles.switchList()">{{"ui.options.gameplay.showConfigurations" | translate}}</md-checkbox>
+  <div layout="row" layout-align="center center" style="z-index: 1; margin-top: -10px; margin-bottom: 10px;">
+    <md-checkbox md-no-ink ng-model="vehicles.showConfigurations" ng-change="vehicles.switchList()">{{"ui.options.gameplay.showConfigurations" | translate}}</md-checkbox>
+  </div>
 
-    <bng-accordion multiple style="overflow-y: auto">
+    <div style="border: 1px solid rgba(0,0,0,0.10); padding: 6px">
+    <bng-accordion multiple style="overflow-y: auto; display: list-item;">
       <bng-accordion-pane ng-repeat="key in vehicles.filterKeyList" ng-if="vehicles.showData(key);">
-        <bng-pane-header class="md-padding">{{ :: key | translate}}</bng-pane-header>
+        <bng-pane-header style="padding: 10px">{{ :: key | translate}}</bng-pane-header>
 
         <bng-pane-body style="margin-left:10px" ng-if=":: !vehicles.isRange(key);">
           <md-checkbox md-no-ink ng-repeat="(option, _) in ::vehicles.data.filters[key] track by $index" ng-model="vehicles.data.filters[key][option]" ng-change="vehicles.applyFilters()">{{ :: option }}</md-checkbox>
@@ -114,7 +116,7 @@
               <label>FROM ({{:: vehicles.considerUnit(key, vehicles.data.filters[key].min)}})</label>
               <input ng-model="vehicles.data.filters[key].min" type="number" style="width:80px;" step="{{vehicles.getStep(key)}}" ng-change="vehicles.applyFilters()">
             </md-input-container>
-            <div layout-align="center center" style="margin:10px;padding-top:15px;">
+            <div layout-align="center center" style="margin:10px; padding-top:15px;">
               <ng-md-icon class="material-icons">
                 keyboard_arrow_right
               </ng-md-icon>
@@ -127,12 +129,17 @@
         </bng-pane-body>
       </bng-accordion-pane>
     </bng-accordion>
+    </div>
+  </div>
 
-    <md-button style="margin-top:5px" class="md-warn md-raised" ng-click="vehicles.checkAll()">
+
+  <div layout="row" layout-align="center center" style="min-height: fit-content;">
+    <md-button class="md-primary md-raised" ng-click="vehicles.checkAll()">
       Reset Filter
     </md-button>
-    <md-button style="margin-top:5px" class=" md-raised" ng-click="vehicles.uncheckAll()">
+    <md-button class=" md-raised" ng-click="vehicles.uncheckAll()">
       Uncheck all
     </md-button>
   </div>
+
 </md-content>
