(x) button while loading into a server now cancels the loading.
Does a session reset when the (x) button is pressed while loading into a server.
Requires a launcher patch first to prevent it from crashing while it's downloading a mod.

--- a/ui/modules/multiplayer/multiplayer.html
+++ b/ui/modules/multiplayer/multiplayer.html
@@ -2,7 +2,7 @@
 
 <div id="LoadingServer" style="display: none;">
     <div id="LoadingBody">
-		<md-button style="right:0; top:0; margin:0;" class="button close-button" ng-class="" ng-click="multiplayer.closePopup()"> X </md-button>
+		<md-button style="right:0; top:0; margin:0;" class="button close-button" ng-class="" ng-click="multiplayer.closeLoadingPopup()"> X </md-button>
         <h1>{{:: 'ui.multiplayer.connecting' | translate}}</h1>
         <span id="LoadingStatus">{{:: 'ui.multiplayer.loading' | translate}}</span>
     </div>
