Tweaked some code, Fixed some typos and added some more fixes
Made pausing an experimental option because if a vehicle had two rapid instabilities it could break VE when the car was reloaded (like a part change etc)

Fix for queue system trying to apply non existent color change

fix by deerboi for queue spamming console and glitching the camera

fixed hazard being constantly enabled and disabled on every tick causing an annoying ticking noise

Added a check if Vehicle rotation are valid before sending them, fixes another desync

Fix for cars shutting off on spawn and during edits

Removed starter and ignition from onExtensionLoaded since they didn't seem to do anything after the fix for above, Let me know if there was a reason for them that i just didn't notice

Fixed typos

--- a/ui/modules/options/multiplayer.partial.html
+++ b/ui/modules/options/multiplayer.partial.html
@@ -8,6 +8,12 @@
     <md-checkbox ng-model="options.data.values.beammpAlternateModloading" ng-change="options.applyState()"></md-checkbox>
   </md-list-item>
 
+  <md-list-item md-no-ink>
+    <p><span style="color: coral; font-weight: bold;">EXPERIMENTAL</span> {{:: 'ui.options.multiplayer.disableInstabilityPausing' | translate }}</p>
+    <md-tooltip md-direction="right">{{:: 'ui.options.multiplayer.disableInstabilityPausing.tooltip' | translate }}</md-tooltip>
+    <md-checkbox ng-model="options.data.values.disableInstabilityPausing" ng-change="options.applyState()"></md-checkbox>
+  </md-list-item>
+
 
   <md-list-item md-no-ink>
     <p>{{:: 'ui.options.multiplayer.queueSpawnEdit' | translate }}</p>
